TestList.testMultiThreadAccessSameKey fails

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ include_directories(${PROJECT_SOURCE_DIR})
 include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(SYSTEM ${PROJECT_SOURCE_DIR}/third-party/gtest-1.7.0/fused-src)
 add_subdirectory(third-party/gtest-1.7.0/fused-src/gtest)
-add_subdirectory(unittest)
 add_subdirectory(src/modules)
+message(STATUS "link_libs=${link_libs}")
+add_subdirectory(unittest)
 add_subdirectory(src/main)
