--- a/src/modules/CMakeLists.txt
+++ b/src/modules/CMakeLists.txt
@@ -1,2 +1,4 @@
 include(compile_library)
-COMPILE_LIBRARY(STATIC)
+set(link_libs "" PARENT_SCOPE)
+COMPILE_LIBRARY(STATIC LIBS link_libs)
+message(STATUS "after COMPILE_LIBRARY, link_libs=${link_libs}")
