--- a/unittest/CMakeLists.txt
+++ b/unittest/CMakeLists.txt
@@ -1,3 +1,4 @@
+message(STATUS "link_libs=${link_libs}")
 set(TESTS
         hello_world.cc
         gtest_demo.cc
@@ -7,7 +8,7 @@ set(TESTS
 foreach (src ${TESTS})
     get_filename_component(exe ${src} NAME_WE)
     add_executable(${exe} ${src})
-    target_link_libraries(${exe} ${LIBS} gtest pthread concurrent)
+    target_link_libraries(${exe} ${link_libs} gtest pthread)
     list(APPEND unittest_deps ${exe})
 endforeach ()
 add_custom_target(unittest DEPENDS ${unittest_deps})
