--- a/unittest/CMakeLists.txt
+++ b/unittest/CMakeLists.txt
@@ -8,6 +8,7 @@ set(TESTS
         hash_test.cc
         misc_test.cc
         decimal_microbm_test.cc
+        test_c++17.cc
         )
 foreach (src ${TESTS})
     get_filename_component(exe ${src} NAME_WE)
