--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -3,6 +3,7 @@ set(BENCHMARKS
         basic_usage.cc
         vectorized_bm.cc
         doris_benchmark.cc
+        benchmark_string_functions.cc
         )
 foreach (src ${BENCHMARKS})
     get_filename_component(exe ${src} NAME_WE)
