--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -4,6 +4,8 @@ set(BENCHMARKS
         vectorized_bm.cc
         doris_benchmark.cc
         benchmark_string_functions.cc
+        benchmark_int_arithmetic.cc
+        benchmark_int_arithmetic_single.cc
         )
 foreach (src ${BENCHMARKS})
     get_filename_component(exe ${src} NAME_WE)
