--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,13 @@ project(cpp_etudes)
 #enable_language(C)
 #enable_language(ASM)
 
-set(CMAKE_CXX_FLAGS_RELEASE  "${CMAKE_CXX_FLAGS} -msse4.1 -msse4.2 -mavx2 -mpopcnt -O3 -std=c++2a")
-set(CMAKE_CXX_FLAGS_DEBUG  "${CMAKE_CXX_FLAGS} -msse4.1 -msse4.2 -mavx2 -g -O0 -std=c++2a")
+set(CMAKE_CXX_FLAGS_RELEASE  "${CMAKE_CXX_FLAGS} -msse4.1 -msse4.2 -mavx2 -mpopcnt -O3 -std=c++17")
+set(CMAKE_CXX_FLAGS_DEBUG  "${CMAKE_CXX_FLAGS} -msse4.1 -msse4.2 -mavx2 -g -O0 -std=c++17")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
 include(cmakes/arch.cmake)
 include(cmakes/target.cmake)
-include(cmakes/tools.cmake)
+#include(cmakes/tools.cmake)
 include(cmakes/analysis.cmake)
 #include(cmakes/cpu_features.cmake)
 option(LLVM_ENABLE "llvm enable" OFF)
