add benchmark_memequal_shuffle0.cc, benchmark_memequal_shuffle1.cc

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -13,6 +13,8 @@ set(BENCHMARKS
         benchmark_repeat.cc
         benchmark_concat.cc
         benchmark_memequal.cc
+        benchmark_memequal_shuffle0.cc
+        benchmark_memequal_shuffle1.cc
         )
 foreach (src ${BENCHMARKS})
     get_filename_component(exe ${src} NAME_WE)
