fixup cpp guard

--- a/unittest/CMakeLists.txt
+++ b/unittest/CMakeLists.txt
@@ -16,6 +16,7 @@ set(TESTS
         test_reverse.cc
         test_repeat.cc
         test_decimalv3.cc
+        test_guard.cc
         )
 foreach (src ${TESTS})
     get_filename_component(exe ${src} NAME_WE)
