--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ if (LLVM_ENABLE)
   endif ()
 
   # Always prefer llvm tools when using clang. For instance, we cannot use GNU ar when llvm LTO is enabled
-  find_program (LLVM_AR_PATH NAMES "llvm-ar" "llvm-ar-10" "llvm-ar-9" "llvm-ar-8")
+  find_program (LLVM_AR_PATH NAMES "llvm-ar" "llvm-ar-11" "llvm-ar-10" "llvm-ar-9" "llvm-ar-8")
 
   if (LLVM_AR_PATH)
     message(STATUS "Using llvm-ar: ${LLVM_AR_PATH}.")
@@ -73,7 +73,7 @@ if (LLVM_ENABLE)
     message(WARNING "Cannot find llvm-ar. System ar will be used instead. It does not work with ThinLTO.")
   endif ()
 
-  find_program (LLVM_RANLIB_PATH NAMES "llvm-ranlib" "llvm-ranlib-10" "llvm-ranlib-9" "llvm-ranlib-8")
+  find_program (LLVM_RANLIB_PATH NAMES "llvm-ranlib" "llvm-ranlib-11" "llvm-ranlib-10" "llvm-ranlib-9" "llvm-ranlib-8")
 
   if (LLVM_RANLIB_PATH)
     message(STATUS "Using llvm-ranlib: ${LLVM_RANLIB_PATH}.")
