add variadic multi-ary guard for function match(incomplete)

--- a/unittest/CMakeLists.txt
+++ b/unittest/CMakeLists.txt
@@ -20,6 +20,7 @@ set(TESTS
         test_delegation.cc
         test_meta_macro.cc
         test_pred_guard.cc
+        test_function_match.cc
         )
 foreach (src ${TESTS})
     get_filename_component(exe ${src} NAME_WE)
