add deptree.pl + folly MPMCQueue

--- a/unittest/CMakeLists.txt
+++ b/unittest/CMakeLists.txt
@@ -22,6 +22,7 @@ set(TESTS
         test_pred_guard.cc
         test_function_match.cc
         test_async.cc
+        test_futex.cc
         )
 foreach (src ${TESTS})
     get_filename_component(exe ${src} NAME_WE)
