--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -7,6 +7,7 @@ set(MAINS
         div_mod.cc
         string_insert.cc
         atomic_fetch_add_strength_test.cc
+        interpreter_demo.cc
         )
 foreach (src ${MAINS})
     get_filename_component(exe ${src} NAME_WE)
