--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -8,6 +8,7 @@ set(MAINS
         string_insert.cc
         atomic_fetch_add_strength_test.cc
         interpreter_demo.cc
+        cache_oom.cc
         )
 foreach (src ${MAINS})
     get_filename_component(exe ${src} NAME_WE)
