--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,16 +6,16 @@ project(cpp_etudes)
 #enable_language(C)
 #enable_language(ASM)
 
-#set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -static-libstdc++  -msse4.1 -msse4.2 -mavx2 -mpopcnt -O3 -std=c++17")
-#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -static-libstdc++ -msse4.1 -msse4.2 -mavx2 -g -O0 -std=c++17")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS}  -static-libstdc++  -O3 -std=c++17")
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS}  -static-libstdc++ -g -O0 -std=c++17")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -static-libstdc++  -msse4.1 -msse4.2 -mavx2 -mpopcnt -O3 -std=c++17")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -static-libstdc++ -msse4.1 -msse4.2 -mavx2 -g -O0 -std=c++17")
+#set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS}  -static-libstdc++  -O3 -std=c++17")
+#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS}  -static-libstdc++ -g -O0 -std=c++17")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
-message(STATUS "abc")
 include(cmakes/arch.cmake)
 include(cmakes/target.cmake)
 #include(cmakes/tools.cmake)
 include(cmakes/analysis.cmake)
+include(cmakes/llvm.cmake)
 #include(cmakes/cpu_features.cmake)
 option(LLVM_ENABLE "llvm enable" ON)
 #if (LLVM_ENABLE)
@@ -83,7 +83,6 @@ option(LLVM_ENABLE "llvm enable" ON)
     else ()
         message(WARNING "Cannot find llvm-ranlib. System ranlib will be used instead. It does not work with ThinLTO.")
     endif ()
-    include(cmakes/llvm.cmake)
     message(STATUS "LLVM include Directory: ${LLVM_INCLUDE_DIRS}")
     message(STATUS "LLVM library Directory: ${LLVM_LIBRARY_DIRS}")
     message(STATUS "LLVM C++ compiler flags: ${LLVM_CXXFLAGS}")
