--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -18,6 +18,7 @@ set(BENCHMARKS
         benchmark_raw_allocator.cc
         benchmark_interpreters.cc
         benchmark_calc_harmonic_mean.cc
+        benchmark_hexdigit.cc
         )
 foreach (src ${BENCHMARKS})
     get_filename_component(exe ${src} NAME_WE)
